mise à jour les offres

--- a/ContactezNous.html
+++ b/ContactezNous.html
@@ -49,31 +49,34 @@
 
 
       <!-- Menu desktop -->
-    
-<nav class="hidden md:flex space-x-6 lg:space-x-8 font-medium text-sm items-center">
-  <a href="index.html">Accueil</a>
-  <a href="Formation.html">Nos formations</a>
-  <a href="ContactezNous.html">Infos & Recrutement</a>
-  <!-- Bouton inscription -->
-  <a href="Inscription.html" class="ml-4 bg-primary text-light px-4 py-2 rounded-lg font-semibold hover:bg-yellow-600">
-    Inscription
-  </a>
-</nav>
+
+      <nav class="hidden md:flex space-x-6 lg:space-x-8 font-medium text-sm items-center">
+        <a href="index.html">Accueil</a>
+        <a href="Formation.html">Nos formations</a>
+        <a href="ContactezNous.html">Infos & Recrutement</a>
+        <!-- Bouton inscription -->
+        <a href="Inscription.html"
+          class="ml-4 bg-primary text-light px-4 py-2 rounded-lg font-semibold hover:bg-yellow-600">
+          Inscription
+        </a>
+      </nav>
 
     </div>
 
     <!-- Menu mobile (dépliage vertical) -->
-<nav id="mobile-menu" class="mobile-collapsible md:hidden bg-light border-t border-gray-200" style="height:0">
-  <div class="flex flex-col px-6 pb-2">
-    <a href="index.html" class="block py-3 hover:text-primary border-b border-gold-100">Accueil</a>
-    <a href="Formation.html" class="block py-3 hover:text-primary border-b border-gold-100">Nos formations</a>
-    <a href="ContactezNous.html" class="block py-3 hover:text-primary border-b border-gold-100">Infos & Recrutement</a>
-    <!-- Bouton inscription -->
-    <a href="Inscription.html" class="block mt-3 bg-primary text-light text-center px-4 py-2 rounded-lg font-semibold hover:bg-yellow-600">
-      Inscription
-    </a>
-  </div>
-</nav>
+    <nav id="mobile-menu" class="mobile-collapsible md:hidden bg-light border-t border-gray-200" style="height:0">
+      <div class="flex flex-col px-6 pb-2">
+        <a href="index.html" class="block py-3 hover:text-primary border-b border-gold-100">Accueil</a>
+        <a href="Formation.html" class="block py-3 hover:text-primary border-b border-gold-100">Nos formations</a>
+        <a href="ContactezNous.html" class="block py-3 hover:text-primary border-b border-gold-100">Infos &
+          Recrutement</a>
+        <!-- Bouton inscription -->
+        <a href="Inscription.html"
+          class="block mt-3 bg-primary text-light text-center px-4 py-2 rounded-lg font-semibold hover:bg-yellow-600">
+          Inscription
+        </a>
+      </div>
+    </nav>
 
   </header>
   <main>
@@ -95,13 +98,17 @@
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-8">
           <div
             class="bg-secondary text-light p-6 rounded-lg shadow-lg opacity-0 translate-y-6 animate-fade-in hover:scale-105 transition-transform duration-300">
-            <h3 class="font-semibold text-lg mb-2">Offre 1 : Enseignant(e) EPS</h3>
-            <p>Poste à temps plein, 1er cycle du primaire, Settat</p>
+            <h3 class="font-semibold text-lg mb-2">Offre 1 : Poste : Agent Commercial</h3>
+            <p>Nous recherchons une personne dynamique et motivée pour promouvoir nos formations, développer notre
+              portefeuille clients et assurer le suivi commercial. Si vous avez le sens du relationnel et aimez les
+              défis, rejoignez notre équipe dès maintenant !, Settat</p>
           </div>
           <div
             class="bg-secondary text-light p-6 rounded-lg shadow-lg opacity-0 translate-y-6 animate-fade-in delay-200 hover:scale-105 transition-transform duration-300">
             <h3 class="font-semibold text-lg mb-2">Offre 2 : Assistant(e) administratif</h3>
-            <p>Poste à temps partiel, bureau principal, Settat</p>
+            <p>Nous recherchons une personne organisée et polyvalente pour assurer la gestion administrative, le suivi
+              des dossiers et le support quotidien à l’équipe. Si vous êtes rigoureux(se) et doté(e) d’un bon sens du
+              service, rejoignez notre académie dès aujourd’hui !, Settat</p>
           </div>
         </div>
 
