mise à jour installation

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
         Inscription
       </a>
 
-      <!-- Bouton installation PWA (dans la nav) -->
-      <button id="installBtn" class="bg-secondary text-white px-4 py-2 rounded-lg font-semibold hover:bg-gray-700 hidden">
+      <!-- Bouton installation PWA (desktop) -->
+      <a href="#" class="bg-primary text-white px-4 py-2 rounded-lg font-semibold hover:bg-gray-700">
         📲 Installer
-      </button>
+      </a>
     </nav>
   </div>
 
@@ -78,10 +78,10 @@
         Inscription
       </a>
 
-      <!-- Bouton installation PWA mobile -->
-      <button id="installBtnMobile" class="block mt-3 bg-secondary text-white text-center px-4 py-2 rounded-lg font-semibold hover:bg-gray-700 hidden">
+      <!-- Bouton installation PWA (mobile) -->
+      <a href="#" class="block mt-3 bg-secondary text-white text-center px-4 py-2 rounded-lg font-semibold hover:bg-gray-700">
         📲 Installer
-      </button>
+      </a>
     </div>
   </nav>
 </header>
