--- a/index.html
+++ b/index.html
@@ -2,16 +2,21 @@
 <html lang="fr">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Accueil | Easy Bridge International Academy</title>
-  <link rel="manifest" href="manifest.json">
-  <link rel="stylesheet" href="style/css/style.css">
-  <!-- Tailwind CSS -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="js/scripts.js" defer></script>
 
+  <!-- Manifest & favicon -->
+  <link rel="manifest" href="/manifest.json" />
+  <link rel="icon" href="/icons/icon-192.png" />
+  <meta name="theme-color" content="#B08E2A" />
+
+  <!-- Feuille de style -->
+  <link rel="stylesheet" href="style/css/style.css" />
+
+  <!-- Configuration Tailwind (définir avant le script CDN) -->
   <script>
+    tailwind = tailwind || {};
     tailwind.config = {
       theme: {
         extend: {
@@ -19,84 +24,78 @@
             primary: '#B08E2A',
             secondary: '#203749',
             light: '#FFFFFF',
-            whatsapp: '#25D366',
+            whatsapp: '#25D366'
           }
         }
       }
-    }
+    };
   </script>
+
+  <!-- Tailwind CSS (CDN) -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Ton script principal (deferred) -->
+  <script src="js/scripts.js" defer></script>
 </head>
 
 <body class="font-sans text-secondary bg-light">
 
   <!-- Navbar -->
-<header class="bg-light shadow sticky top-0 z-50">
-  <div class="max-w-7xl mx-auto px-6 md:px-10 py-4 flex justify-between items-center">
-    <!-- Logo -->
-    <div class="flex items-center space-x-3">
-      <a href="index.html"><img src="img/logo.jpg" alt="Logo EasyBridge" class="h-10"></a>
-      <div class="leading-tight">
-        <h1 class="font-bold text-sm text-secondary">Easy Bridge</h1>
-        <p class="text-xs text-gray-600">International Academy</p>
+  <header class="bg-light shadow sticky top-0 z-50">
+    <div class="max-w-7xl mx-auto px-6 md:px-10 py-4 flex justify-between items-center">
+      <!-- Logo -->
+      <div class="flex items-center space-x-3">
+        <a href="index.html"><img src="img/logo.jpg" alt="Logo EasyBridge" class="h-10"></a>
+        <div class="leading-tight">
+          <h1 class="font-bold text-sm text-secondary">Easy Bridge</h1>
+          <p class="text-xs text-gray-600">International Academy</p>
+        </div>
       </div>
-    </div>
 
-    <!-- Bouton menu mobile -->
-    <button id="menu-btn" class="md:hidden flex flex-col space-y-1.5" aria-label="Menu" aria-expanded="false">
-      <span class="block w-6 h-0.5 bg-secondary"></span>
-      <span class="block w-6 h-0.5 bg-secondary"></span>
-      <span class="block w-6 h-0.5 bg-secondary"></span>
-    </button>
+      <!-- Bouton menu mobile -->
+      <button id="menu-btn" class="md:hidden flex flex-col space-y-1.5" aria-label="Menu" aria-expanded="false">
+        <span class="block w-6 h-0.5 bg-secondary"></span>
+        <span class="block w-6 h-0.5 bg-secondary"></span>
+        <span class="block w-6 h-0.5 bg-secondary"></span>
+      </button>
 
-    <!-- Menu desktop -->
-    <nav class="hidden md:flex space-x-6 lg:space-x-8 font-medium text-sm items-center">
-      <a href="index.html">Accueil</a>
-      <a href="Formation.html">Nos formations</a>
-      <a href="ContactezNous.html">Infos & Recrutement</a>
+      <!-- Menu desktop -->
+      <nav class="hidden md:flex space-x-6 lg:space-x-8 font-medium text-sm items-center" role="navigation" aria-label="Menu principal">
+        <a href="index.html">Accueil</a>
+        <a href="Formation.html">Nos formations</a>
+        <a href="ContactezNous.html">Infos & Recrutement</a>
 
-      <!-- Bouton inscription -->
-      <a href="Inscription.html" class="bg-primary text-light px-4 py-2 rounded-lg font-semibold hover:bg-yellow-600">
-        Inscription
-      </a>
+        <!-- Bouton inscription -->
+        <a href="Inscription.html" class="bg-primary text-light px-4 py-2 rounded-lg font-semibold hover:bg-yellow-600">
+          Inscription
+        </a>
 
-      <!-- Bouton installation PWA (desktop) -->
-      <a href="#" class="bg-primary text-white px-4 py-2 rounded-lg font-semibold hover:bg-gray-700">
-        📲 Installer
-      </a>
-    </nav>
-  </div>
-
-  <!-- Menu mobile -->
-  <nav id="mobile-menu" class="mobile-collapsible md:hidden bg-light border-t border-gray-200" style="height:0">
-    <div class="flex flex-col px-6 pb-2">
-      <a href="index.html" class="block py-3 hover:text-primary border-b border-gold-100">Accueil</a>
-      <a href="Formation.html" class="block py-3 hover:text-primary border-b border-gold-100">Nos formations</a>
-      <a href="ContactezNous.html" class="block py-3 hover:text-primary border-b border-gold-100">Infos & Recrutement</a>
+        <!-- Bouton installation PWA (desktop) -->
       
-      <!-- Bouton inscription -->
-      <a href="Inscription.html" class="block mt-3 bg-primary text-light text-center px-4 py-2 rounded-lg font-semibold hover:bg-yellow-600">
-        Inscription
-      </a>
-
-      <!-- Bouton installation PWA (mobile) -->
-      <a href="#" class="block mt-3 bg-secondary text-white text-center px-4 py-2 rounded-lg font-semibold hover:bg-gray-700">
-        📲 Installer
-      </a>
+      </nav>
     </div>
-  </nav>
-</header>
 
+    <!-- Menu mobile -->
+    <nav id="mobile-menu" class="mobile-collapsible md:hidden bg-light border-t border-gray-200" style="height:0">
+      <div class="flex flex-col px-6 pb-2">
+        <a href="index.html" class="block py-3 hover:text-primary border-b border-gold-100">Accueil</a>
+        <a href="Formation.html" class="block py-3 hover:text-primary border-b border-gold-100">Nos formations</a>
+        <a href="ContactezNous.html" class="block py-3 hover:text-primary border-b border-gold-100">Infos & Recrutement</a>
 
+        <!-- Bouton inscription -->
+        <a href="Inscription.html" class="block mt-3 bg-primary text-light text-center px-4 py-2 rounded-lg font-semibold hover:bg-yellow-600">
+          Inscription
+        </a>
 
+        <!-- Bouton installation PWA (mobile) - id ajouté -->
+        <a href="#" id="installBtnMobile" class="block mt-3 bg-secondary text-white text-center px-4 py-2 rounded-lg font-semibold hover:bg-gray-700">
+          📲 Installer
+        </a>
+      </div>
+    </nav>
+  </header>
 
   <main>
-
-
-
-    <!-- Script -->
-
-
-
     <!-- Hero -->
     <section class="relative bg-secondary text-light">
       <div class="w-full h-[400px] object-cover opacity-60"></div>
@@ -162,8 +161,7 @@
           <div class="p-4">
             <h4 class="font-bold mb-2">Nouvel atelier créatif</h4>
             <p class="text-gray-700 text-sm">Easy Bridge propose un atelier de cake design pour découvrir l’art de
-              décorer
-              des gâteaux avec créativité.</p>
+              décorer des gâteaux avec créativité.</p>
           </div>
         </div>
         <div class="bg-light shadow rounded-xl overflow-hidden">
@@ -176,7 +174,7 @@
       </div>
     </section>
 
-    <!-- Entreprises partenaires -->
+    <!-- Partenaires -->
     <section class="bg-gray-100 py-12">
       <div class="max-w-6xl mx-auto px-6 text-center">
         <h3 class="text-2xl font-bold mb-8">Nos Partenaires</h3>
@@ -192,20 +190,70 @@
     <!-- Call to Action -->
     <section class="py-12 text-center">
       <h3 class="text-2xl font-bold mb-4">Rejoignez Easy Bridge International Academy</h3>
-      <p class="text-gray-700 mb-6">Construisez votre avenir dès aujourd’hui avec nos programmes de formation adaptés.
-      </p>
+      <p class="text-gray-700 mb-6">Construisez votre avenir dès aujourd’hui avec nos programmes de formation adaptés.</p>
       <a href="ContactezNous.html" class="bg-primary text-light px-6 py-3 rounded-lg font-semibold hover:bg-yellow-600">
         Contactez-nous
       </a>
     </section>
   </main>
+
   <!-- Footer -->
   <footer class="bg-secondary text-light py-6 text-center text-sm">
     © 2025 Easy Bridge International Academy. Tous droits réservés.
   </footer>
 
-  <!-- Script menu -->
+  <!-- Enregistrement du Service Worker (après chargement) -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/service-worker.js')
+          .then(() => console.log('Service Worker enregistré'))
+          .catch(err => console.error('Erreur SW:', err));
+      });
+    }
+  </script>
+
+  <!-- Script PWA: gestion beforeinstallprompt -->
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      let deferredPrompt;
+      const installBtn = document.getElementById('installBtn');
+      const installBtnMobile = document.getElementById('installBtnMobile');
+
+      // Désactiver visuellement les liens tant que non prêt
+      [installBtn, installBtnMobile].forEach(btn => {
+        if (btn) {
+          btn.classList.add('opacity-60', 'pointer-events-none');
+        }
+      });
+
+      window.addEventListener('beforeinstallprompt', (e) => {
+        e.preventDefault();
+        deferredPrompt = e;
+
+        [installBtn, installBtnMobile].forEach(btn => {
+          if (!btn) return;
+          // rendre cliquable et visible
+          btn.classList.remove('opacity-60', 'pointer-events-none', 'hidden');
+          btn.addEventListener('click', async (ev) => {
+            ev.preventDefault();
+            if (!deferredPrompt) return;
+            deferredPrompt.prompt();
+            const choice = await deferredPrompt.userChoice;
+            console.log('Installation:', choice.outcome);
+            deferredPrompt = null;
+            btn.classList.add('hidden');
+          }, { once: true });
+        });
+      });
+
+      window.addEventListener('appinstalled', () => {
+        console.log('PWA installée ✔');
+        if (installBtn) installBtn.classList.add('hidden');
+        if (installBtnMobile) installBtnMobile.classList.add('hidden');
+      });
+    });
+  </script>
 
 </body>
-
 </html>
