--- a/ContactezNous.html
+++ b/ContactezNous.html
@@ -9,26 +9,10 @@
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="js/scripts.js" defer></script>
-
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            primary: '#B08E2A',
-            secondary: '#203749',
-            light: '#FFFFFF',
-            whatsapp: '#25D366',
-          }
-        }
-      }
-    }
-  </script>
   <link rel="stylesheet" href="style/css/style.css">
 </head>
 
 <body class="font-sans text-secondary bg-light">
-
   <header class="bg-light shadow sticky top-0 z-50">
     <div class="max-w-7xl mx-auto px-6 md:px-10 py-4 flex justify-between items-center">
       <!-- Logo -->
@@ -47,37 +31,35 @@
         <span class="block w-6 h-0.5 bg-secondary"></span>
       </button>
 
-
       <!-- Menu desktop -->
-
-      <nav class="hidden md:flex space-x-6 lg:space-x-8 font-medium text-sm items-center">
+      <nav class="hidden md:flex space-x-6 lg:space-x-8 font-medium text-sm items-center" role="navigation"
+        aria-label="Menu principal">
         <a href="index.html">Accueil</a>
         <a href="Formation.html">Nos formations</a>
         <a href="ContactezNous.html">Infos & Recrutement</a>
-        <!-- Bouton inscription -->
-        <a href="Inscription.html"
-          class="ml-4 bg-primary text-light px-4 py-2 rounded-lg font-semibold hover:bg-yellow-600">
+        <a href="Inscription.html" class="bg-primary text-light px-4 py-2 rounded-lg font-semibold hover:bg-yellow-600">
           Inscription
         </a>
       </nav>
-
     </div>
 
-    <!-- Menu mobile (dépliage vertical) -->
+    <!-- Menu mobile -->
     <nav id="mobile-menu" class="mobile-collapsible md:hidden bg-light border-t border-gray-200" style="height:0">
       <div class="flex flex-col px-6 pb-2">
         <a href="index.html" class="block py-3 hover:text-primary border-b border-gold-100">Accueil</a>
         <a href="Formation.html" class="block py-3 hover:text-primary border-b border-gold-100">Nos formations</a>
         <a href="ContactezNous.html" class="block py-3 hover:text-primary border-b border-gold-100">Infos &
           Recrutement</a>
-        <!-- Bouton inscription -->
         <a href="Inscription.html"
           class="block mt-3 bg-primary text-light text-center px-4 py-2 rounded-lg font-semibold hover:bg-yellow-600">
           Inscription
         </a>
+        <a href="#" id="installBtnMobile"
+          class="block mt-3 bg-secondary text-white text-center px-4 py-2 rounded-lg font-semibold hover:bg-gray-700">
+          📲 Installer
+        </a>
       </div>
     </nav>
-
   </header>
   <main>
 
@@ -119,16 +101,26 @@
         <div class="max-w-md mx-auto bg-light p-6 rounded-2xl shadow-lg">
           <h3 class="text-xl font-bold text-secondary mb-6 text-center">Postulez maintenant</h3>
           <form action="candidature.php" method="POST" enctype="multipart/form-data" class="space-y-4">
-            <input type="text" name="cand_name" placeholder="Nom complet" required
+            <label for="cand_name"
+              class="block w-full rounded-lg  px-3 py-2 focus:outline-none focus:ring-2 focus:ring-primary">Nom complet</label>
+            <input id="cand_name" name="cand_name" placeholder="Nom complet" required
               class="block w-full rounded-lg border border-gray-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-primary">
-            <input type="email" name="cand_email" placeholder="Email" required
+               <label for="cand_email"
+              class="block w-full rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-primary">Email</label>
+            
+            <input id="cand_email" type="email" name="cand_email" placeholder="Email" required
               class="block w-full rounded-lg border border-gray-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-primary">
-            <input type="tel" name="cand_phone" placeholder="Téléphone"
+               <label for="cand_tel"
+              class="block w-full rounded-lg  px-3 py-2 focus:outline-none focus:ring-2 focus:ring-primary">Téléphone</label>
+            
+            <input id="cand_tel" type="tel" name="cand_phone" placeholder="Téléphone"
               class="block w-full rounded-lg border border-gray-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-primary">
-            <input type="file" name="cand_cv" required class="block w-full text-sm focus:outline-none">
+               <label for="cand_cv"
+              class="block w-full rounded-lg  px-3 py-2 focus:outline-none focus:ring-2 focus:ring-primary">CV</label>
+            <input  id="cand_cv" type="file" name="cand_cv" required class="block w-full text-sm focus:outline-none">
             <textarea name="cand_message" rows="3" placeholder="Votre message ou motivation"
               class="block w-full rounded-lg border border-gray-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-primary"></textarea>
-            <button type="submit"
+            <button type="submit" aria-label="Postuler"
               class="w-full bg-primary text-light font-semibold py-2 px-4 rounded-lg hover:bg-secondary transition">
               Postuler
             </button>
@@ -150,7 +142,7 @@
     <!-- Section Carte + Formulaire -->
     <main class="relative w-full h-[80vh]">
       <!-- Google Map -->
-      <iframe class="absolute inset-0 w-full h-full" frameborder="0"
+      <iframe title="l'adresse de l'école" class="absolute inset-0 w-full h-full" frameborder="0"
         src="https://www.google.com/maps?q=شارع الأميرة لالة عائشة إقامة ملاك الرحمة الطابق 3, Settat, Morocco&output=embed"
         allowfullscreen></iframe>
 
@@ -163,9 +155,10 @@
           <h2 class="text-xl font-bold text-secondary mb-6 text-center">Envoyez-nous un message</h2>
           <form action="#" method="POST" class="space-y-4">
             <div>
-              <label for="name" class="block text-sm font-medium text-secondary">Nom complet</label>
-              <input type="text" id="name" name="name" required
-                class="mt-1 block w-full rounded-lg border border-gray-300 px-3 py-2 text-sm sm:text-base focus:outline-none focus:ring-2 focus:ring-primary">
+              <label for="cand_name" class="block text-sm font-medium text-secondary">Nom complet</label>
+              <input id="cand_name" type="text" name="cand_name" placeholder="Nom complet"
+                class="mt-1 block w-full rounded-lg border border-gray-300 px-3 py-2 text-sm sm:text-base focus:outline-none focus:ring-2 focus:ring-primary"
+                required>
             </div>
             <div>
               <label for="email" class="block text-sm font-medium text-secondary">Adresse email</label>
@@ -177,7 +170,7 @@
               <textarea id="message" name="message" rows="4" required
                 class="mt-1 block w-full rounded-lg border border-gray-300 px-3 py-2 text-sm sm:text-base focus:outline-none focus:ring-2 focus:ring-primary"></textarea>
             </div>
-            <button type="submit"
+            <button type="submit" aria-label="Envoyer le message"
               class="w-full bg-primary text-light font-semibold py-2 px-4 rounded-lg hover:bg-secondary transition text-sm sm:text-base">
               Envoyer
             </button>
@@ -214,13 +207,13 @@
         </div>
         <div class="bg-light shadow rounded-lg p-4 text-center">
           <h4 class="font-semibold">Secrétariat</h4>
-          <p class="text-sm text-gray-600">+212 6 98 76 54 32</p>
-          <p class="text-sm text-gray-600">secretariat@easybridge.ma</p>
+          <p class="text-sm text-gray-800">+212 6 98 76 54 32</p>
+          <p class="text-sm text-gray-800">secretariat@easybridge.ma</p>
         </div>
         <div class="bg-light shadow rounded-lg p-4 text-center">
           <h4 class="font-semibold">Inscriptions</h4>
-          <p class="text-sm text-gray-600">+212 7 21 93 63 80</p>
-          <p class="text-sm text-gray-600">inscription@easybridge.ma</p>
+          <p class="text-sm text-gray-800">+212 7 21 93 63 80</p>
+          <p class="text-sm text-gray-800">inscription@easybridge.ma</p>
         </div>
       </div>
     </section>
