--- a/ContactezNous.html
+++ b/ContactezNous.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Easy Bridge International Academy - Offrant des formations professionnelles et supérieures pour un avenir réussi." />
   <title>Contactez-nous | Easy Bridge International Academy</title>
 
   <!-- Tailwind CSS -->
