--- a/Formation.html
+++ b/Formation.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Easy Bridge International Academy - Offrant des formations professionnelles et supérieures pour un avenir réussi." />
   <title>Formations | Easy Bridge International Academy</title>
   <script src="https://cdn.tailwindcss.com"></script>
    <script src="js/scripts.js" defer></script>
