--- a/Inscription.html
+++ b/Inscription.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Easy Bridge International Academy - Offrant des formations professionnelles et supérieures pour un avenir réussi." />
   <title>Inscription | Easy Bridge International Academy</title>
   <link rel="stylesheet" href="style/css/style.css">
   <!-- Tailwind CSS -->
