Validation du code HTML

--- a/Formation.html
+++ b/Formation.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Easy Bridge International Academy - Offrant des formations professionnelles et supérieures pour un avenir réussi." />
+    content="Easy Bridge International Academy - Offrant des formations professionnelles et supérieures pour un avenir réussi.">
   <title>Formations | Easy Bridge International Academy</title>
   <script src="https://cdn.tailwindcss.com"></script>
    <script src="js/scripts.js" defer></script>
@@ -38,7 +38,7 @@
       </button>
 
       <!-- Menu desktop -->
-      <nav class="hidden md:flex space-x-6 lg:space-x-8 font-medium text-sm items-center" role="navigation"
+      <nav class="hidden md:flex space-x-6 lg:space-x-8 font-medium text-sm items-center"
         aria-label="Menu principal">
         <a href="index.html">Accueil</a>
         <a href="Formation.html">Nos formations</a>
@@ -95,10 +95,10 @@
     <div class="formation-card gestion bg-white p-6 shadow-lg rounded-2xl transform transition duration-500 hover:scale-105 hover:shadow-2xl animate-slide-up">
       <h4 class="font-semibold text-xl mb-3 text-primary">📊 Pôle Gestion</h4>
       <ul class="space-y-2 text-sm text-gray-700">
-        <li>🎓 <a href="fichiers/Catalogue Formations-2.pdf" target="_blank" class="hover:text-secondary hover:underline">Bachelor en Management des PME</a></li>
-        <li>🎓 <a href="fichiers/Catalogue Formations-3.pdf" target="_blank" class="hover:text-secondary hover:underline">Master en Management des PME</a></li>
-        <li>🎓 <a href="fichiers/Catalogue Formations-6.pdf" target="_blank" class="hover:text-secondary hover:underline">Bachelor en Management des RH</a></li>
-        <li>🎓 <a href="fichiers/Catalogue Formations-7.pdf" target="_blank" class="hover:text-secondary hover:underline">Master en Management des PME</a></li>
+        <li>🎓 <a href="fichiers/CatalogueFormations-2.pdf" target="_blank" class="hover:text-secondary hover:underline">Bachelor en Management des PME</a></li>
+        <li>🎓 <a href="fichiers/CatalogueFormations-3.pdf" target="_blank" class="hover:text-secondary hover:underline">Master en Management des PME</a></li>
+        <li>🎓 <a href="fichiers/CatalogueFormations-6.pdf" target="_blank" class="hover:text-secondary hover:underline">Bachelor en Management des RH</a></li>
+        <li>🎓 <a href="fichiers/CatalogueFormations-7.pdf" target="_blank" class="hover:text-secondary hover:underline">Master en Management des PME</a></li>
       </ul>
     </div>
 
@@ -106,10 +106,10 @@
     <div class="formation-card informatique bg-white p-6 shadow-lg rounded-2xl transform transition duration-500 hover:scale-105 hover:shadow-2xl animate-slide-up delay-200">
       <h4 class="font-semibold text-xl mb-3 text-primary">💻 Pôle Informatique</h4>
       <ul class="space-y-2 text-sm text-gray-700">
-        <li>🎓 <a href="fichiers/Catalogue Formations-28.pdf" target="_blank" class="hover:text-secondary hover:underline">Bachelor en Systèmes et Réseaux Informatiques</a></li>
-        <li>🎓 <a href="fichiers/Catalogue Formations-29.pdf" target="_blank" class="hover:text-secondary hover:underline">Master en Systèmes et Réseaux Informatiques</a></li>
-        <li>🎓 <a href="fichiers/Catalogue Formations-30.pdf" target="_blank" class="hover:text-secondary hover:underline">Bachelor en Développement Logiciel</a></li>
-        <li>🎓 <a href="fichiers/Catalogue Formations-31.pdf" target="_blank" class="hover:text-secondary hover:underline">Master en Développement Logiciel</a></li>
+        <li>🎓 <a href="fichiers/CatalogueFormations-28.pdf" target="_blank" class="hover:text-secondary hover:underline">Bachelor en Systèmes et Réseaux Informatiques</a></li>
+        <li>🎓 <a href="fichiers/CatalogueFormations-29.pdf" target="_blank" class="hover:text-secondary hover:underline">Master en Systèmes et Réseaux Informatiques</a></li>
+        <li>🎓 <a href="fichiers/CatalogueFormations-30.pdf" target="_blank" class="hover:text-secondary hover:underline">Bachelor en Développement Logiciel</a></li>
+        <li>🎓 <a href="fichiers/CatalogueFormations-31.pdf" target="_blank" class="hover:text-secondary hover:underline">Master en Développement Logiciel</a></li>
       </ul>
     </div>
 
@@ -118,10 +118,10 @@
 
       <h4 class="font-semibold text-xl mb-3 text-primary">🛠️ Pôle Génie appliqué</h4>
       <ul class="space-y-2 text-sm text-gray-700">
-        <li>🎓 <a href="fichiers/Catalogue Formations-69.pdf" target="_blank" class="hover:text-secondary hover:underline">Bachelor en Efficacité énergétique</a></li>
-        <li>🎓 <a href="fichiers/Catalogue Formations-70.pdf" target="_blank" class="hover:text-secondary hover:underline">Master en Efficacité Énergétique</a></li>
-        <li>🎓 <a href="fichiers/Catalogue Formations-75.pdf" target="_blank" class="hover:text-secondary hover:underline">Bachelor en Génie climatique et froid</a></li>
-        <li>🎓 <a href="fichiers/Catalogue Formations-76.pdf" target="_blank" class="hover:text-secondary hover:underline">Master en Génie climatique et froid</a></li>
+        <li>🎓 <a href="fichiers/CatalogueFormations-69.pdf" target="_blank" class="hover:text-secondary hover:underline">Bachelor en Efficacité énergétique</a></li>
+        <li>🎓 <a href="fichiers/CatalogueFormations-70.pdf" target="_blank" class="hover:text-secondary hover:underline">Master en Efficacité Énergétique</a></li>
+        <li>🎓 <a href="fichiers/CatalogueFormations-75.pdf" target="_blank" class="hover:text-secondary hover:underline">Bachelor en Génie climatique et froid</a></li>
+        <li>🎓 <a href="fichiers/CatalogueFormations-76.pdf" target="_blank" class="hover:text-secondary hover:underline">Master en Génie climatique et froid</a></li>
       </ul>
     </div>
 
@@ -129,10 +129,10 @@
     <div class="formation-card logistique bg-white p-6 shadow-lg rounded-2xl transform transition duration-500 hover:scale-105 hover:shadow-2xl animate-slide-up delay-600">
       <h4 class="font-semibold text-xl mb-3 text-primary">🚚 Pôle Logistique</h4>
       <ul class="space-y-2 text-sm text-gray-700">
-        <li>🎓 <a href="fichiers/Catalogue Formations-56.pdf" target="_blank" class="hover:text-secondary hover:underline">Bachelor en Logistique et transports</a></li>
-        <li>🎓 <a href="fichiers/Catalogue Formations-57.pdf" target="_blank" class="hover:text-secondary hover:underline">Master en Logistique et transports</a></li>
-        <li>🎓 <a href="fichiers/Catalogue Formations-58.pdf" target="_blank" class="hover:text-secondary hover:underline">Bachelor en Génie Civil et Construction</a></li>
-        <li>🎓 <a href="fichiers/Catalogue Formations-59.pdf" target="_blank" class="hover:text-secondary hover:underline">Master en Génie Civil et Construction</a></li>
+        <li>🎓 <a href="fichiers/CatalogueFormations-56.pdf" target="_blank" class="hover:text-secondary hover:underline">Bachelor en Logistique et transports</a></li>
+        <li>🎓 <a href="fichiers/CatalogueFormations-57.pdf" target="_blank" class="hover:text-secondary hover:underline">Master en Logistique et transports</a></li>
+        <li>🎓 <a href="fichiers/CatalogueFormations-58.pdf" target="_blank" class="hover:text-secondary hover:underline">Bachelor en Génie Civil et Construction</a></li>
+        <li>🎓 <a href="fichiers/CatalogueFormations-59.pdf" target="_blank" class="hover:text-secondary hover:underline">Master en Génie Civil et Construction</a></li>
       </ul>
     </div>
 
