--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="fr">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Easy Bridge International Academy - Offrant des formations professionnelles et supérieures pour un avenir réussi." />
+    content="Easy Bridge International Academy - Offrant des formations professionnelles et supérieures pour un avenir réussi.">
   <title>Accueil | Easy Bridge International Academy</title>
 
   <!-- Manifest & favicon -->
-  <link rel="manifest" href="/manifest.json" />
-  <link rel="icon" href="/icons/icon-192.png" />
-  <meta name="theme-color" content="#B08E2A" />
+  <link rel="manifest" href="/manifest.json" >
+  <link rel="icon" href="/icons/icon-192.png">
+  <meta name="theme-color" content="#B08E2A">
 
   <!-- Feuille de style -->
-  <link rel="stylesheet" href="style/css/style.css" />
+  <link rel="stylesheet" href="style/css/style.css">
 
   <!-- Tailwind CSS (CDN) -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -45,7 +45,7 @@
       </button>
 
       <!-- Menu desktop -->
-      <nav class="hidden md:flex space-x-6 lg:space-x-8 font-medium text-sm items-center" role="navigation"
+      <nav class="hidden md:flex space-x-6 lg:space-x-8 font-medium text-sm items-center"
         aria-label="Menu principal">
         <a href="index.html">Accueil</a>
         <a href="Formation.html">Nos formations</a>
