--- a/Inscription.html
+++ b/Inscription.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Easy Bridge International Academy - Offrant des formations professionnelles et supérieures pour un avenir réussi." />
+    content="Easy Bridge International Academy - Offrant des formations professionnelles et supérieures pour un avenir réussi.">
   <title>Inscription | Easy Bridge International Academy</title>
   <link rel="stylesheet" href="style/css/style.css">
   <!-- Tailwind CSS -->
@@ -39,7 +39,7 @@
       </button>
 
       <!-- Menu desktop -->
-      <nav class="hidden md:flex space-x-6 lg:space-x-8 font-medium text-sm items-center" role="navigation"
+      <nav class="hidden md:flex space-x-6 lg:space-x-8 font-medium text-sm items-center"
         aria-label="Menu principal">
         <a href="index.html">Accueil</a>
         <a href="Formation.html">Nos formations</a>
