Vérification de footer de toutes les pages

--- a/Inscription.html
+++ b/Inscription.html
@@ -154,7 +154,10 @@
       </div>
     </section>
   </main>
-
+ <!-- Footer -->
+  <footer class="bg-secondary text-light py-6 text-center text-sm">
+    © 2025 Zakaria NOUBI, CEGEP de trois-rivières. Tous droits réservés.
+  </footer>
 </body>
 
 
