--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
   <!-- Footer -->
   <footer class="bg-secondary text-light py-6 text-center text-sm">
-    © 2025 Easy Bridge International Academy. Tous droits réservés.
+    © 2025 Zakaria NOUBI, CEGEP de trois-rivières. Tous droits réservés.
   </footer>
 
 
