--- a/ContactezNous.html
+++ b/ContactezNous.html
@@ -245,7 +245,7 @@
   </main>
   <!-- Footer -->
   <footer class="bg-secondary text-light py-4 text-center text-xs sm:text-sm">
-    © 2025 Easy Bridge International Academy. Tous droits réservés.
+     © 2025 Zakaria NOUBI, CEGEP de trois-rivières. Tous droits réservés.
   </footer>
 
 </body>
