--- a/Formation.html
+++ b/Formation.html
@@ -244,7 +244,7 @@
 
 
   <!-- Footer -->
-  <footer class="bg-secondary text-light py-4 text-center text-sm">© 2025 Easy Bridge International Academy.</footer>
+  <footer class="bg-secondary text-light py-4 text-center text-sm"> © 2025 Zakaria NOUBI, CEGEP de trois-rivières. Tous droits réservés.</footer>
 
 
 </body>
